src/test/ui/macros/format-args-temporaries-async.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/format-args-temporaries-async.rs:32:30
   |
LL |     let _write = write!(&mut AsyncStdout, "...").await;
   |                  ------------^^^^^^^^^^^--------
   |                  |           |
   |                  |           creates a temporary which is freed while still in use
   |                  temporary value is freed at the end of this statement
   |                  borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/format-args-temporaries-async.rs:34:34
   |
LL |     let _writeln = writeln!(&mut AsyncStdout, "...").await;
   |                    --------------^^^^^^^^^^^--------
   |                    |             |
   |                    |             creates a temporary which is freed while still in use
   |                    temporary value is freed at the end of this statement
   |                    borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
